--- a/FlaskMongo/database/config.json
+++ b/FlaskMongo/database/config.json
@@ -1,5 +1,5 @@
 {
-    "MONGO_URI_SERVER":"mongodb+srv://<username>:Ciclo4_votaciones@cluster0.rjjn8xc.mongodb.net/?retryWrites=true&w=majority",
+    "MONGO_URI_SERVER":"mongodb+srv://Ciclo4_votaciones:Ciclo4_votaciones@cluster0.rjjn8xc.mongodb.net/?retryWrites=true&w=majority",
     "MONGO_URI_LOCAL":"mongodb://localhost",
     "LOCAL_PORT":27017
 }
